Fix overflow, logo

--- a/resources/sass/base/_base.sass
+++ b/resources/sass/base/_base.sass
@@ -12,6 +12,5 @@ input
     font-family: 'Lato', sans-serif
     font-size: 1.025rem
 
-body
-    overflow: auto
-
+body::-webkit-scrollbar
+    display: none
